# secret-btc

./: .gitattributes  .gitignore  .gitmodules  FeeReport.md  Makefile  README.md  docker-compose.yml
.github/workflows/: Client.yml  Contracts.yml
client/sbtc-js/: .eslintrc.js  package.json  tsconfig.json
client/sbtc-js/src/: ShinobiClient.ts  TendermintRPCClient.ts  UnitConverter.ts  hash.ts  index.ts  mintURI.ts  proto.ts
client/sbtc-js/test/: BitcoinMarkleTree.spec.ts  TendermintMerkleTree.spec.ts
client/shinobi-multisig/: .eslintignore  .prettierrc.js  README.md  package.json  tsconfig.json
client/shinobi-multisig/src/: CliError.ts  buildClient.ts  config.ts  index.ts
client/shuriken-node/: .env.example  .gitignore  README.md  nodemon.json  package.json  tsconfig.json
client/shuriken-node/src/: BtcClientInterface.ts  BtcRpcClient.ts  BtcSyncClient.ts  PrefixedLogger.ts  RegtestUtilClient.ts  SFPSSyncClient.ts  TendermintSyncClient.ts  chunkArray.ts  index.ts
contracts/bitcoin_spv/: Cargo.toml  contract.wasm
contracts/bitcoin_spv/examples/: schema.rs
contracts/bitcoin_spv/schema/: bitcoin_s_p_v_handle_msg.json  init_msg.json  query_answer.json  query_msg.json
contracts/bitcoin_spv/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/bitcoin_spv/src/contract/: handle.rs  init.rs  query.rs  tests.rs
contracts/bitcoin_spv/src/contract/tests/: handle.rs  helper.rs  init.rs  query.rs
contracts/bitcoin_spv/src/state/: chaindb.rs  config.rs  prefix.rs
contracts/finance_admin_v1/: Cargo.toml
contracts/finance_admin_v1/examples/: schema.rs
contracts/finance_admin_v1/schema/: array_of__operation.json  custom_query_answer.json  handle_msg_for__custom_handle_msg.json  init_msg.json  query_answer.json  query_msg_for__custom_query_msg.json
contracts/finance_admin_v1/src/: config.rs  contract.rs  ibm.rs  lib.rs  msg.rs  state.rs
contracts/gateway/: Cargo.toml  contract.wasm
contracts/gateway/examples/: schema.rs
contracts/gateway/schema/: handle_answer.json  handle_msg.json  init_msg.json  query_answer.json  query_msg.json
contracts/gateway/src/: contract.rs  error.rs  state.rs
contracts/gateway/src/contract/: handle.rs  init.rs  query.rs  query_bitcoin_network.rs
contracts/gateway/src/contract/tests/: handle.rs  helper.rs  init.rs  query.rs
contracts/gateway/src/state/: bitcoin_utxo.rs  config.rs  mint_key.rs  prefix.rs  queue_store.rs  suspension_switch.rs
contracts/libs/bitcoin_header_chain/: Cargo.toml  README.md
contracts/libs/bitcoin_header_chain/src/: header_chain.rs  lib.rs  merkle_proof.rs
contracts/libs/bitcoin_header_chain/src/header_chain/: chaindb.rs  test.rs
contracts/libs/contract_test_utils/: Cargo.toml
contracts/libs/contract_test_utils/src/: context.rs  contract_runner.rs  lib.rs  querier.rs  storage.rs
contracts/libs/ed25519-dalek/: Cargo.toml  README.md
contracts/libs/pure-rust-bitcoin/: Cargo.toml
contracts/libs/sfps_lib/: Cargo.toml
contracts/libs/sfps_lib/.cargo/: config
contracts/libs/sfps_lib/cosmos_proto/: Cargo.toml  README.md  build.rs
contracts/libs/sfps_lib/cosmos_proto/src/: lib.rs
contracts/libs/sfps_lib/src/: header.rs  header_chain.rs  lib.rs  light_block.rs  light_client.rs  merkle.rs  response_deliver_tx_proof.rs  serde.rs  signed_header.rs  subsequent_hashes.rs  tx_result_proof.rs  validator_set.rs  vote.rs
contracts/libs/sfps_lib/src/light_block/: header.rs  signed_header.rs  validators.rs
contracts/libs/sfps_lib/src/light_block/header/: fields.rs
contracts/libs/sfps_lib/src/light_block/signed_header/: commit.rs
contracts/libs/sfps_lib/src/light_block/signed_header/commit/: signature_message.rs  vote.rs
contracts/libs/sfps_lib/src/serde/: base64.rs  default_to_none.rs  str.rs
contracts/libs/sfps_lib/tests/: feature.rs  testdata.json
contracts/libs/shared_types/: Cargo.toml
contracts/libs/shared_types/src/: bitcoin_spv.rs  finance_admin.rs  gateway.rs  lib.rs  log.rs  multisig.rs  prng.rs  sfps.rs  shuriken.rs  state_proxy.rs  treasury.rs  viewing_key.rs
contracts/libs/shared_types/src/log/: event.rs
contracts/libs/shared_types/src/state_proxy/: client.rs  msg.rs  server.rs
contracts/locked-staking/: Cargo.toml
contracts/locked-staking/examples/: schema.rs
contracts/locked-staking/schema/: lock_msg.json  query_answer.json  query_msg.json
contracts/locked-staking/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/log/: Cargo.toml  contract.wasm
contracts/log/examples/: schema.rs
contracts/log/schema/: handle_answer.json  handle_msg.json  query_answer.json  query_msg.json
contracts/log/src/: contract.rs  state.rs
contracts/multisig/: Cargo.toml  contract.wasm
contracts/multisig/examples/: schema.rs
contracts/multisig/schema/: handle_answer.json  handle_msg.json  init_msg.json  query_answer.json  query_msg.json
contracts/multisig/src/: contract.rs  state.rs
contracts/sfps/: Cargo.toml  Makefile  contract.wasm
contracts/sfps/examples/: schema.rs
contracts/sfps/schema/: init_msg.json  query_answer.json  query_msg.json  s_f_p_s_handle_msg.json
contracts/sfps/src/: contract.rs  lib.rs  rng.rs  state.rs
contracts/sfps/src/contract/: api_ed25519_verifier.rs  handle.rs  init.rs  query.rs  test.rs
contracts/sfps/src/state/: chaindb.rs  prng_seed.rs
contracts/shuriken/: Cargo.toml  contract.wasm
contracts/shuriken/examples/: schema.rs
contracts/shuriken/schema/: handle_msg.json  init_msg.json  query_answer.json
contracts/shuriken/src/: contract.rs  state.rs
contracts/state/: Cargo.toml  contract.wasm
contracts/treasury/: Cargo.toml
contracts/vesting/: Cargo.toml  Makefile  contract.wasm
deploy/: .gitignore  Dockerfile  package.json
deploy/src/: Config.ts  ContractDeployer.ts  buildClient.ts  index.ts  services.ts
docker/bitcoin/: .dockerignore  .gitignore  Dockerfile  README.md
docker/sn-node/: Dockerfile  bootstrap_init.sh
integration-test/: package.json  tsconfig.json
integration-test/src/: FeeReportRenderer.ts  index.ts
integration-test/test/: .feeReportRenderer.spec.ts  FeeReportRenderer.spec.ts
(+83 files in other folders)
