[package]
authors = ["Shinobi Protocol"]
edition = "2018"
name = "bitcoin_spv"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
bitcoin = {path = "../libs/pure-rust-bitcoin", features = ["use-serde"]}
bitcoin_header_chain = {path = "../libs/bitcoin_header_chain"}
cosmwasm-std = {package = "secret-cosmwasm-std", version = "0.10.0"}
cosmwasm-storage = {package = "secret-cosmwasm-storage", version = "0.10.0"}
schemars = "0.7"
secret-toolkit = "0.5.0"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
shared_types = {path = "../libs/shared_types", features = ["bitcoin_spv"]}

[dev-dependencies]
cosmwasm-schema = {version = "0.9.2"}
hex = "0.4.2"
rand = {version = "0.7.3"}
contract_test_utils = {path = "../libs/contract_test_utils"}
