[package]
authors = ["Shinobi Protocol"]
edition = "2018"
name = "gateway"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
base64 = "0.12.3"
bitcoin = {path = "../libs/pure-rust-bitcoin", features = ["use-serde"]}
bitcoin_header_chain = {path = "../libs/bitcoin_header_chain"}
cosmwasm-std = {git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print"}
cosmwasm-storage = {git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print"}
rand = {version = "0.7.3"}
schemars = "0.7"
secret-toolkit = {git = "https://github.com/enigmampc/secret-toolkit", rev = "v0.1.1-debug-print"}
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
shared_types = {path = "../libs/shared_types", features = ["bitcoin_spv", "sfps", "finance_admin", "gateway"]}
subtle = {version = "2.2.3", default-features = false}

[dev-dependencies]
common_macros = "0.1.1"
contract_test_utils = {path = "../libs/contract_test_utils"}
cosmwasm-schema = {version = "0.9.2"}
