[package]
authors = ["Shinobi Protocol"]
edition = "2018"
name = "log"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = {git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print"}
cosmwasm-storage = {git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print"}
schemars = "0.7"
secret-toolkit = {git = "https://github.com/enigmampc/secret-toolkit", rev = "v0.1.1-debug-print"}
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
shared_types = {path = "../libs/shared_types", features = ["log"]}

[dev-dependencies]
cosmwasm-schema = {version = "0.9.2"}
