[package]
authors = ["Shinobi Protocol"]
edition = "2018"
name = "sfps_contract"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
full_signatures_test = []

[dependencies]
aes-siv = "0.6.2"
cosmwasm-std = {package = "secret-cosmwasm-std", version = "0.10.1"}
cosmwasm-storage = {package = "secret-cosmwasm-storage", version = "0.10.0"}
schemars = "0.7"
secret-toolkit = "0.2.0"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
sfps_lib = {path = "../libs/sfps_lib"}
shared_types = {path = "../libs/shared_types", features = ["sfps"]}

[dev-dependencies]
cosmwasm-schema = {version = "0.9.2"}
serde_json = "1.0.82"
hex = "0.4"
