[package]
authors = ["Tamas Blummer <tamas.blummer@gmail.com>", "Shinobi Protocol"]
edition = "2018"
name = "bitcoin_header_chain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = {path = "../pure-rust-bitcoin", features = ["use-serde"]}
byteorder = "1.3.4"
serde = "1"
serde_derive = "1"

[dev-dependencies]
hex = "0.4.2"
rand = "0.8.3"
