[package]
authors = ["Shinobi Protocol"]
edition = "2018"
name = "contract_test_utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = []

[dependencies]
cosmwasm-std = {git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.4-debug-print"}
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
