[package]
authors = ["Shinobi Protocol"]
edition = "2018"
name = "contract_test_utils"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = []

[dependencies]
common_macros = "0.1.1"
cosmwasm-std = {package = "secret-cosmwasm-std", version = "0.10.0"}
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
shared_types = {path = "../shared_types", features=["state_proxy"]}
secret-toolkit = {version = "0.5.0", features=["serialization"]}
hex = "0.4.3"