[package]
authors = ["Shinobi Protocol"]
edition = "2018"
name = "sfps_lib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
chrono = {version = "0.4", features = ["serde"]}
hex = {version = "0.4.3", features = ["serde"]}
schemars = "0.7"
serde = {version = "1.0.125", features = ["derive"]}
sha2 = "0.9.3"
bincode = "1.3.3"
cosmos_proto = {path = "cosmos_proto"}

[dev-dependencies]
serde_json = "1.0.64"
ed25519-dalek = {version = "1", features = ["batch"]}

